adds locale to dateformat mapping